--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ Este arquivo já esta pronto e você pode mandar para quem quiser
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quer sair comigo?</title>
+    <title>Sorriso</title>
 </head>
 
 <body>
     <div id="conteudo">
-        <h2>Beatriz aceita sair comigo?</h2>
+        <h2>B*a*r*z você sabe de quem é sorriso mas lindo?</h2>
         <div style="margin: auto;width: 170px;">
             <button style="position: fixed;display: block;" class="btn" onclick="sim()">SIM</button>
             <button class="btn" onclick="desvia(this)" onmouseover="desvia(this)" style="position: absolute;">NÃO</button>
@@ -47,11 +47,11 @@ Este arquivo já esta pronto e você pode mandar para quem quiser
 
 <script>
     function sim() {
-        alert("Você aceitou sair comigo! kkkkkkk chama ai :)");
+        alert("Isso é o seu mesmo :)");
         // redireciona para um URL após clicar no SIM
-        alert("É serio chama ai pf :)")
+        alert("Então nunca mas chore tá ;)")
 
-        alert("Você vai chamar né ????")
+        alert("É serio mesmo !!! -_-")
     }
 
     function desvia(btn) {
