--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ Este arquivo já esta pronto e você pode mandar para quem quiser
         alert("Então nunca mas chore tá ;)")
 
         alert("É serio mesmo !!! -_-")
+
+        alert("OBS não sou hacher kkk :)" ) 
     }
 
     function desvia(btn) {
