--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ Este arquivo já esta pronto e você pode mandar para quem quiser
     function sim() {
         alert("Isso é o seu mesmo :)");
         // redireciona para um URL após clicar no SIM
-        alert("Então nunca mas chore tá ;)")
+        alert("Então nunca mas chore tá :)")
 
         alert("É serio mesmo !!! -_-")
 
-        alert("OBS não sou hacher kkk :)" ) 
+        alert("obs não sou hacker kkk :)" ) 
     }
 
     function desvia(btn) {
